--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header role="banner">
+    <header>
         <div class="header-content">
             <img class="logo" src="logo.png" alt="ToBoolist Logo">
             <h1>ToBoolist</h1>
         </div>
     </header>
+    <main>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, assumenda. A laudantium hic aperiam esse labore, illo necessitatibus magnam. Nihil neque consequuntur reprehenderit aliquid tenetur sapiente eveniet consectetur minus nam?
+
+    </main>
 </body>
 </html>
