--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
             <h1>ToBoolist</h1>
         </div>
     </header>
-    <main>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, assumenda. A laudantium hic aperiam esse labore, illo necessitatibus magnam. Nihil neque consequuntur reprehenderit aliquid tenetur sapiente eveniet consectetur minus nam?
+    <main>
+        <span class="tag tag-blue"> Tag di base</span>
+        <span class="tag tag-nero"> Tag di base </span>
+        <hr>
+        <h2>⬇️New task</h2>
+
 
     </main>
 </body>
