--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToBoolist</title>
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Roboto:wght@100..900&display=swap" rel="stylesheet">
-    <!--Googel font -->
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <img class="logo" src="logo.png" alt="ToBoolist Logo">
+            <img class="logo" src="logo.png" alt="Logo">
             <h1>ToBoolist</h1>
         </div>
     </header>
+    
     <main>
-        <span class="tag tag-blue"> Tag di base</span>
-        <span class="tag tag-nero"> Tag di base </span>
+        <span class="tag tag-blue">Tag di base</span>
+        <span class="tag tag-black">Tag di base</span> 
         <hr>
-        <h2>⬇️New task</h2>
-
-
+        <h2>⬇️ New Task</h2>
+        <p>
+            <span class="circle">&check;</span> 
+            Quarterly Newsletter
+            <span class="tag-1 tag-blue">Tag di base</span>
+        </p>
+        <h3>⬇️ Today</h3>
+        <div></div>
     </main>
 </body>
 </html>
