--- a/index.html
+++ b/index.html
@@ -32,7 +32,41 @@
             <span class="tag-1 tag-blue">Tag di base</span>
         </p>
         <h3>⬇️ Today</h3>
-        <div></div>
+        <p><span class="circle">&check;</span> 
+            Quarterly Newsletter
+            <span class="tag-1 tag-blue">Tag di base</span></p>
+            <p><span class="circle">&check;</span> 
+                Quarterly Newsletter
+                <span class="tag-1 tag-blue">Tag di base</span></p>
+                <p><span class="circle">&check;</span> 
+                    Quarterly Newsletter
+                    <span class="tag-1 tag-blue">Tag di base</span></p>
+                    <p><span class="circle">&check;</span> 
+                        Quarterly Newsletter
+                        <span class="tag-1 tag-blue">Tag di base</span></p>
+                        <h4>⬇️ Upcoming</h4>
+                        <p>
+                            <span class="circle">&check;</span> 
+                            Quarterly Newsletter
+                            <span class="tag-1 tag-blue">Tag di base</span>
+                        </p>
+                        <p>
+                            <span class="circle">&check;</span> 
+                            Quarterly Newsletter
+                            <span class="tag-1 tag-blue">Tag di base</span>
+                        </p>
+                        <p>
+                            <span class="circle">&check;</span> 
+                            Quarterly Newsletter
+                            <span class="tag-1 tag-blue">Tag di base</span>
+                        </p>
+                        <p>
+                            <span class="circle">&check;</span> 
+                            Quarterly Newsletter
+                            <span class="tag-1 tag-blue">Tag di base</span>
+                        </p>
+                        
+                        
     </main>
 </body>
 </html>
