--- a/index.html
+++ b/index.html
@@ -33,36 +33,36 @@
         </p>
         <h3>⬇️ Today</h3>
         <p><span class="circle">&check;</span> 
-            Quarterly Newsletter
+            Recruiting blog post
             <span class="tag-1 tag-blue">Tag di base</span></p>
             <p><span class="circle">&check;</span> 
-                Quarterly Newsletter
+                Mobile app launch
                 <span class="tag-1 tag-blue">Tag di base</span></p>
                 <p><span class="circle">&check;</span> 
-                    Quarterly Newsletter
+                    Interview John H.
                     <span class="tag-1 tag-blue">Tag di base</span></p>
                     <p><span class="circle">&check;</span> 
-                        Quarterly Newsletter
+                        Summit update to mobile storefronts
                         <span class="tag-1 tag-blue">Tag di base</span></p>
                         <h4>⬇️ Upcoming</h4>
                         <p>
                             <span class="circle">&check;</span> 
-                            Quarterly Newsletter
+                            Schedule meeting with Alex
                             <span class="tag-1 tag-blue">Tag di base</span>
                         </p>
                         <p>
                             <span class="circle">&check;</span> 
-                            Quarterly Newsletter
+                            Homepage refresh
                             <span class="tag-1 tag-blue">Tag di base</span>
                         </p>
                         <p>
                             <span class="circle">&check;</span> 
-                            Quarterly Newsletter
+                            Onboard new Sales team members
                             <span class="tag-1 tag-blue">Tag di base</span>
                         </p>
                         <p>
                             <span class="circle">&check;</span> 
-                            Quarterly Newsletter
+                            Review editorial calendar
                             <span class="tag-1 tag-blue">Tag di base</span>
                         </p>
                         
